# backpack-prediction-challenge

./: .gitignore  environment.yml  pyproject.toml  readme.md
backpack_predictor/: __init__.py  features.py  model.py  model_config.py  utils.py
notebooks/: 01_eda copy.ipynb  01_eda.ipynb  01_eda_1.ipynb  01_eda_2.ipynb  01_eda_3.ipynb  01_eda_4.ipynb  01_eda_cont.ipynb  02_feature_engineering copy.ipynb  02_feature_engineering.ipynb  02_feature_engineering_1.ipynb  02_feature_engineering_2.ipynb  02_random_guesses.ipynb  03_hyperparams.ipynb  03_hyperparams_cat.ipynb  03_hyperparams_cat_2.ipynb  03_hyperparams_cat_3.ipynb  03_hyperparams_cat_4.ipynb  03_hyperparams_lgb.ipynb  03_hyperparams_lgb_2.ipynb  03_hyperparams_lgb_ex.ipynb  03_hyperparams_xgb.ipynb  03_hyperparams_xgb_1.ipynb  03_hyperparams_xgb_2.ipynb  04_ensemble.ipynb  autogluon.ipynb  autogluon_ex1.ipynb  clustering.ipynb  db.sqlite3  feature_selection.ipynb  gpu.ipynb  target_encoding.ipynb  test_gpu.ipynb
notebooks/archive/: autogluon_ex1.ipynb
optuna/: 2025-02-04_09-30-59.db  2025-02-04_18-04-48.db  2025-02-05_20-46.db  2025-02-06_17-45.db
optuna/lightgbm/: 2025-02-04_12-22-09.db  2025-02-04_15-51-05.db  2025-02-04_18-04-48.db  2025-02-04_21-12-55.db  2025-02-05_01-37-59.db  2025-02-05_17-35-41.db
