[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backpack_predictor"
version = "0.1.0"
description = "Kaggle S5E2"
authors = [
    { name = "Jordan Barker" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["python", "kaggle", "data", "science"]
dependencies = [
    "ipykernel",
    "numpy",
    "pandas",
    "seaborn",
    "matplotlib", 
    "scipy", 
    "scikit-learn",
    "optuna", 
    "optuna-dashboard",
    "lightgbm", 
    "optuna-integration[lightgbm]",
    "xgboost", 
    "optuna-integration[xgboost]",
    "catboost",
    "shap",
    "autogluon"
]
requires-python = ">=3.9"

[tool.setuptools]
packages = ["backpack_predictor"]